# AndroidOpenCL

./: .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/peerless2012/demo/opencl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/OpenCL4J/: CMakeLists.txt
app/src/main/cpp/OpenCL4J/jni/: AndroidLog.cpp  OpenCL4J.cpp  OpenCL4J.h
app/src/main/java/com/peerless2012/demo/opencl/: App.kt  MainActivity.kt
app/src/main/java/com/peerless2012/demo/opencl/jni/: OpenCL4J.kt
app/src/main/res/layout/: app_bar_main.xml  content_main.xml  fragment_gallery.xml  fragment_home.xml  fragment_slideshow.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/peerless2012/demo/opencl/: ExampleUnitTest.kt
contrib/apk/: OpenCL-X benchmark_1.41_Apkpure.apk  OpenCL-Z_1.0.2_Apkpure.apk
gradle/wrapper/: gradle-wrapper.properties
lib_open_cl/: README.md  build.gradle
lib_open_cl/src/androidTest/java/com/peerless2012/opencl/: ExampleInstrumentedTest.java
lib_open_cl/src/main/: AndroidManifest.xml
lib_open_cl/src/main/cpp/: CMakeLists.txt
lib_open_cl/src/main/cpp/OpenCL4J/: CMakeLists.txt
lib_open_cl/src/main/cpp/OpenCL4J/jni/: AndroidLog.h
lib_open_cl/src/main/java/com/peerless2012/opencl/: OpenCL.kt
lib_open_cl/src/main/java/com/peerless2012/opencl/jni/: OpenCLJNI.kt
lib_open_cl/src/test/java/com/peerless2012/opencl/: ExampleUnitTest.java
(+10 files in other folders)
